--- a/skillcore/pubspec.yaml
+++ b/skillcore/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.9.0
   google_sign_in: ^6.3.0
+  gluestack_ui: ^0.1.0-beta.4
 
 dev_dependencies:
   flutter_test:
